--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,7 +12,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/app.ts"
+      "dest": "src/app.ts",
+      "methods": ["POST", "GET", "PATCH", "DELETE", "PUT"]
     }
   ]
 }
