--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/app.ts",
+      "dest": "src/",
       "methods": ["POST", "GET", "PATCH", "DELETE", "PUT"]
     }
   ]
