--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "start": "node ./dist/app.js",
-    "build": "tsc"
+    "build": "tsc",
+    "vercel-build": "echo hello_i_am_running"
   },
   "keywords": [],
   "author": "",
