--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,1 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "src/app.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["src/**/*"]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "src/app.ts",
-      "methods": ["POST", "GET", "PATCH", "DELETE", "PUT"]
-    }
-  ]
-}
+{ "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
