--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,1 +1,16 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/app.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "src/(.*)",
+      "dest": "src/app.ts",
+      "methods": ["POST", "GET", "PATCH", "DELETE", "PUT"]
+    }
+  ]
+}
