--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^3.1.0",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
