--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
     "module": "NodeNext",
+    "esModuleInterop": true,
+    "target": "ES2020",
+    "noImplicitAny": true,
     "moduleResolution": "NodeNext",
-    "baseUrl": ".",
-    "outDir": "dist",
     "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
     "allowImportingTsExtensions": true,
     "noEmit": true
   },
-  "include": ["src/**/*", "./api/*.ts"]
+  "include": ["./src/**/*"]
 }
