--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/index.ts",
+      "src": "src/api/**/*.ts",
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "src/index.ts" }]
+  "routes": [{ "src": "/api/(.*)", "dest": "/src/api/$1" }]
 }
