--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
-
-  "routes": [{ "src": "/api/(.*)", "dest": "/src/api/$1" }]
+  "builds": [
+    {
+      "src": "src/api/**/*.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [{ "src": "/api/(.*)", "dest": "/src/api/*.ts" }]
 }
