--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,5 +6,5 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/api/(.*)", "dest": "/src/api/*.ts" }]
+  "routes": [{ "src": "/api/(.*)", "dest": "/src/api/index.ts" }]
 }
